# tenantpal

./: .gitignore  README.md  ingest_pdf.py  pyproject.toml
src/tenant_pal_crew_automation_for_renters_rights/: crew.py  main.py
src/tenant_pal_crew_automation_for_renters_rights/config/: agents.yaml  llm.yaml  tasks.yaml
src/tenant_pal_crew_automation_for_renters_rights/db/: chroma.sqlite3
tenant-pal-frontend/: package-lock.json  package.json
tenant-pal-frontend/app/: page.tsx
tenant-pal-frontend/app/api/run-crew/: route.ts
tenant-pal-frontend/components/: feature-card.tsx  footer.tsx  json-display.tsx  lease-issue-form.tsx  loading-spinner.tsx  navbar.tsx  testimonial-card.tsx
